Removed Admin register and created secret keys file to get random key everytime

--- a/frontend/admin-register.html
+++ b/frontend/admin-register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>Admin Register</title>
@@ -39,8 +39,8 @@
       </div>
     </div>
     
-    <!-- Credentials Display -->
-    <div id="credentials" class="card card-custom" style="width: 400px; display: none;">
+     Credentials Display   -> its a comment
+   <div id="credentials" class="card card-custom" style="width: 400px; display: none;">
       <div class="card-body p-4">
         <h4 class="text-white text-center mb-4">Registration Successful!</h4>
         <p class="text-white">Your admin account has been created.</p>
@@ -58,4 +58,4 @@
   <script src="js/config.js"></script>
   <script src="js/admin.js"></script>
 </body>
-</html>
+</html> -->
