--- a/frontend/attendance.html
+++ b/frontend/attendance.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Attendance</title>
+  <title>Attendance Management</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body class="bg-dark">
-  
-  <div class="container py-4">
+
+  <div id="navbar"></div>
+
+  <div class="container py-2">
     <div class="card card-custom">
-      <div class="card-header">
-        <h4 class="text-white mb-0">Attendance List</h4>
-      </div>
-      <div class="card-body">
-        <div id="attendance-list"></div>
-      </div>
-      <div class="card-footer">
-        <button onclick="location.href='admin-dashboard.html'" class="btn btn-secondary">
-          Back to Dashboard
+      <div class="card-header bg-dark-custom d-flex justify-content-between align-items-center">
+        <h5 class="mb-0 text-white"><i class="bi bi-calendar-check me-2"></i>Attendance Log</h5>
+        <button onclick="location.href='admin-dashboard.html'" class="btn btn-sm btn-outline-secondary">
+          <i class="bi bi-arrow-left"></i> Back
         </button>
+      </div>
+      <div class="card-body p-0">
+        <div id="attendance-list">
+          <!-- Loaded by JS -->
+        </div>
       </div>
     </div>
   </div>
-  
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/config.js"></script>
   <script src="js/admin.js"></script>
+  <script src="js/notifications.js"></script>
   <script>
-    fetch('navbar.html').then(r => r.text()).then(html => {
-      document.getElementById('navbar').innerHTML = html;
+    document.addEventListener('DOMContentLoaded', () => {
+      fetch('navbar.html')
+        .then(r => r.text())
+        .then(html => {
+          document.getElementById('navbar').innerHTML = html;
+          loadNotifications();
+        });
+      loadAttendance();
     });
-    loadAttendance();
   </script>
 </body>
+
 </html>
