--- a/frontend/employee-dashboard.html
+++ b/frontend/employee-dashboard.html
@@ -124,7 +124,9 @@
     </div>
   </div>
 
+  <div class="toast-container position-fixed bottom-0 end-0 p-3" id="toast-container"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
   <script src="js/config.js"></script>
   <script src="js/employee.js"></script>
   <script src="js/notifications.js"></script>
