--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
@@ -11,9 +12,9 @@
 
 <body class="bg-dark">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark-custom border-bottom border-secondary mb-4">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark-custom border-bottom border-secondary mb-4 sticky-top">
     <div class="container">
-      <a class="navbar-brand text-primary" href="admin-dashboard.html">
+      <a class="navbar-brand text-gradient" href="admin-dashboard.html">
         <i class="bi bi-shield-fill-check me-2"></i>EMS ADMIN
       </a>
 
@@ -30,12 +31,15 @@
           </button>
           <ul class="dropdown-menu dropdown-menu-end notification-dropdown p-2" id="notification-list"
             aria-labelledby="notificationDropdown">
-            <li class="dropdown-item text-muted text-center py-3">Loading...</li>
+            <li class="dropdown-item text-muted text-center py-3">
+              <div class="spinner-border spinner-border-sm text-primary" role="status"></div>
+              <span class="ms-2">Loading notifications...</span>
+            </li>
           </ul>
         </div>
 
         <button onclick="logout()" class="btn btn-sm btn-outline-danger">
-          <i class="bi bi-box-arrow-right"></i> Logout
+          <i class="bi bi-box-arrow-right me-1"></i> Logout
         </button>
       </div>
     </div>
@@ -56,27 +60,42 @@
             data-bs-target="#deptModal">
             <i class="bi bi-building"></i> Departments
           </button>
-          <button class="btn btn-warning" onclick="loadLeaveRequests()" data-bs-toggle="modal"
+          <button class="btn btn-warning position-relative" onclick="loadLeaveRequests()" data-bs-toggle="modal"
             data-bs-target="#leaveModal">
             <i class="bi bi-calendar-event"></i> Leave Requests
+            <!-- Pending Leave Badge -->
+            <span id="pending-leave-badge"
+              class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger d-none"
+              style="font-size: 0.65rem; padding: 0.25em 0.45em;">
+              0
+            </span>
           </button>
         </div>
       </div>
     </div>
 
     <!-- Employee List -->
-    <div class="card card-custom">
-      <div class="card-header bg-dark-custom d-flex justify-content-between align-items-center">
-        <h5 class="mb-0 text-white"><i class="bi bi-people me-2"></i>Employees</h5>
-        <div class="input-group input-group-sm w-auto">
-          <span class="input-group-text bg-dark border-secondary text-muted"><i class="bi bi-search"></i></span>
+    <div class="card card-custom fade-in">
+      <div class="card-header bg-dark-custom d-flex justify-content-between align-items-center flex-wrap gap-3">
+        <h5 class="mb-0 text-white">
+          <i class="bi bi-people me-2"></i>Employees
+        </h5>
+        <div class="input-group input-group-sm" style="min-width: 250px;">
+          <span class="input-group-text bg-dark border-secondary text-muted">
+            <i class="bi bi-search"></i>
+          </span>
           <input type="text" id="employeeSearch" class="form-control bg-dark border-secondary text-white"
             placeholder="Search employees..." onkeyup="searchEmployees()">
         </div>
       </div>
       <div class="card-body p-0" id="employees-body">
         <div id="employees">
-          <!-- Loaded by JS -->
+          <div class="text-center py-5">
+            <div class="spinner-border text-primary" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+            <p class="text-muted mt-3 mb-0">Loading employees...</p>
+          </div>
         </div>
       </div>
     </div>
@@ -112,16 +131,24 @@
   </div>
 
   <!-- Leave Modal -->
-  <div class="modal fade" id="leaveModal" tabindex="-1">
-    <div class="modal-dialog modal-lg">
+  <div class="modal fade" id="leaveModal" tabindex="-1" aria-labelledby="leaveModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable">
       <div class="modal-content bg-dark-custom">
         <div class="modal-header border-secondary">
-          <h5 class="modal-title text-white">Leave Requests</h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+          <h5 class="modal-title text-white" id="leaveModalLabel">
+            <i class="bi bi-calendar-event me-2"></i>Leave Requests
+            <span id="pending-leave-modal-badge" class="badge bg-danger ms-2 d-none">0 Pending</span>
+          </h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           <div id="leave-requests-list">
-            <!-- Loaded by JS -->
+            <div class="text-center py-4">
+              <div class="spinner-border spinner-border-sm text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+              <p class="text-muted mt-3 mb-0">Loading leave requests...</p>
+            </div>
           </div>
         </div>
       </div>
@@ -138,9 +165,12 @@
     document.addEventListener('DOMContentLoaded', () => {
       loadEmployees();
       loadNotifications();
+      loadPendingLeaveCount(); // New function to load pending count
+      
       // Poll for updates
       setInterval(loadEmployees, 30000);
-      setInterval(loadLeaveRequests, 30000);
+      setInterval(loadPendingLeaveCount, 10000); // Check pending leaves frequently
+      setInterval(loadNotifications, 30000);
     });
   </script>
 </body>
