--- a/frontend/employee-dashboard.html
+++ b/frontend/employee-dashboard.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title>Employee Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Employee Dashboard - EMS Portal</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/style.css">
@@ -11,9 +12,9 @@
 
 <body class="bg-dark">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark-custom border-bottom border-secondary mb-4">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark-custom border-bottom border-secondary mb-4 sticky-top">
     <div class="container">
-      <a class="navbar-brand text-success" href="employee-dashboard.html">
+      <a class="navbar-brand text-gradient" href="employee-dashboard.html">
         <i class="bi bi-person-badge me-2"></i>EMS Portal
       </a>
 
@@ -30,12 +31,15 @@
           </button>
           <ul class="dropdown-menu dropdown-menu-end notification-dropdown p-2" id="notification-list"
             aria-labelledby="notificationDropdown">
-            <li class="dropdown-item text-muted text-center py-3">Loading...</li>
+            <li class="dropdown-item text-muted text-center py-3">
+              <div class="spinner-border spinner-border-sm text-primary" role="status"></div>
+              <span class="ms-2">Loading notifications...</span>
+            </li>
           </ul>
         </div>
 
         <button onclick="logout()" class="btn btn-sm btn-outline-danger">
-          <i class="bi bi-box-arrow-right"></i> Logout
+          <i class="bi bi-box-arrow-right me-1"></i> Logout
         </button>
       </div>
     </div>
@@ -45,13 +49,18 @@
     <div class="row g-4">
       <!-- Profile Card -->
       <div class="col-md-4">
-        <div class="card card-custom h-100">
+        <div class="card card-custom h-100 fade-in">
           <div class="card-header bg-dark-custom">
-            <h5 class="mb-0 text-white"><i class="bi bi-person-circle me-2"></i>My Profile</h5>
+            <h5 class="mb-0 text-white">
+              <i class="bi bi-person-circle me-2"></i>My Profile
+            </h5>
           </div>
           <div class="card-body" id="profile">
             <div class="text-center py-4">
-              <div class="spinner-border text-primary" role="status"></div>
+              <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+              <p class="text-muted mt-3 mb-0">Loading profile...</p>
             </div>
           </div>
         </div>
@@ -59,17 +68,21 @@
 
       <!-- Attendance & Leave Tab -->
       <div class="col-md-8">
-        <div class="card card-custom">
+        <div class="card card-custom fade-in">
           <div class="card-header bg-dark-custom p-0 border-bottom border-secondary">
             <ul class="nav nav-tabs border-0" id="empTab" role="tablist">
               <li class="nav-item" role="presentation">
                 <button class="nav-link active border-0 bg-transparent text-white py-3 px-4" id="attendance-tab"
-                  data-bs-toggle="tab" data-bs-target="#attendance-pane" type="button" role="tab">Attendance</button>
+                  data-bs-toggle="tab" data-bs-target="#attendance-pane" type="button" role="tab">
+                  <i class="bi bi-calendar-check me-2"></i>Attendance
+                </button>
               </li>
               <li class="nav-item" role="presentation">
                 <button class="nav-link border-0 bg-transparent text-white py-3 px-4" id="leave-tab"
                   data-bs-toggle="tab" data-bs-target="#leave-pane" type="button" role="tab"
-                  onclick="loadLeaveRequests()">Leave Management</button>
+                  onclick="loadLeaveRequests()">
+                  <i class="bi bi-calendar-event me-2"></i>Leave Management
+                </button>
               </li>
             </ul>
           </div>
@@ -77,19 +90,34 @@
             <!-- Attendance Pane -->
             <div class="tab-pane fade show active" id="attendance-pane" role="tabpanel">
               <div id="attendance-section" class="py-2">
-                <!-- Loaded by JS -->
+                <div class="text-center py-4">
+                  <div class="spinner-border text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div>
+                  <p class="text-muted mt-3 mb-0">Loading attendance...</p>
+                </div>
               </div>
             </div>
             <!-- Leave Pane -->
             <div class="tab-pane fade" id="leave-pane" role="tabpanel">
-              <div class="d-flex justify-content-between align-items-center mb-3">
-                <h6 class="text-white mb-0">My Leave Requests</h6>
-                <button class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#applyLeaveModal">
-                  Apply for Leave
+              <div class="d-flex justify-content-between align-items-center mb-4">
+                <div>
+                  <h6 class="text-white mb-1">
+                    <i class="bi bi-calendar-event me-2"></i>My Leave Requests
+                  </h6>
+                  <small class="text-muted">View and manage your leave applications</small>
+                </div>
+                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#applyLeaveModal">
+                  <i class="bi bi-plus-circle me-1"></i>Apply for Leave
                 </button>
               </div>
               <div id="leave-list" class="py-2">
-                <!-- Loaded by JS -->
+                <div class="text-center py-4">
+                  <div class="spinner-border spinner-border-sm text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div>
+                  <p class="text-muted mt-3 mb-0">Loading leave requests...</p>
+                </div>
               </div>
             </div>
           </div>
@@ -99,26 +127,39 @@
   </div>
 
   <!-- Apply Leave Modal -->
-  <div class="modal fade" id="applyLeaveModal" tabindex="-1">
-    <div class="modal-dialog">
+  <div class="modal fade" id="applyLeaveModal" tabindex="-1" aria-labelledby="applyLeaveModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content bg-dark-custom">
         <div class="modal-header border-secondary">
-          <h5 class="modal-title text-white">Apply for Leave</h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+          <h5 class="modal-title text-white" id="applyLeaveModalLabel">
+            <i class="bi bi-calendar-plus me-2"></i>Apply for Leave
+          </h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <div class="mb-3">
-            <label class="form-label text-muted">Leave Date</label>
-            <input type="date" id="leave_date" class="form-control bg-dark text-white border-secondary">
-          </div>
-          <div class="mb-3">
-            <label class="form-label text-muted">Reason</label>
-            <textarea id="leave_reason" class="form-control bg-dark text-white border-secondary" rows="3"
-              placeholder="Explain your reason..."></textarea>
-          </div>
-          <div class="text-end">
-            <button type="button" class="btn btn-primary" onclick="applyLeave()">Submit Application</button>
-          </div>
+          <form id="leaveForm" onsubmit="event.preventDefault(); applyLeave();">
+            <div class="mb-4">
+              <label for="leave_date" class="form-label">
+                <i class="bi bi-calendar3 me-1"></i>Leave Date
+              </label>
+              <input type="date" id="leave_date" class="form-control bg-dark text-white border-secondary" required>
+              <small class="text-muted">Select the date you need leave</small>
+            </div>
+            <div class="mb-4">
+              <label for="leave_reason" class="form-label">
+                <i class="bi bi-text-paragraph me-1"></i>Reason
+              </label>
+              <textarea id="leave_reason" class="form-control bg-dark text-white border-secondary" rows="4"
+                placeholder="Please explain the reason for your leave request..." required></textarea>
+              <small class="text-muted">Provide a brief explanation for your leave request</small>
+            </div>
+            <div class="d-flex justify-content-end gap-2">
+              <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn btn-primary" id="submitLeaveBtn">
+                <i class="bi bi-send me-1"></i>Submit Application
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
@@ -134,7 +175,15 @@
     document.addEventListener('DOMContentLoaded', () => {
       loadEmployeeDashboard();
       loadNotifications();
-      // Poll for updates
+      
+      // Initialize WebSocket connection for real-time updates
+      if (typeof initWebSocket === 'function') {
+        setTimeout(() => {
+          initWebSocket();
+        }, 1000);
+      }
+      
+      // Poll for updates as fallback (in case WebSocket fails)
       setInterval(loadLeaveRequests, 30000);
       setInterval(loadAttendanceSection, 30000);
     });
