ui fixes and Docker implementation

--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -240,7 +240,7 @@
   <script src="js/config.js"></script>
   <script src="js/admin.js"></script>
   <script src="js/notifications.js"></script>
-  <script src="js/chat.js"></script>
+  <script src="js/chat.js?v=2"></script>
   <script>
     // Function to load admin profile
     function loadAdminProfile() {
