--- a/frontend/employee-dashboard.html
+++ b/frontend/employee-dashboard.html
@@ -245,7 +245,7 @@
   <script src="js/config.js"></script>
   <script src="js/employee.js"></script>
   <script src="js/notifications.js"></script>
-  <script src="js/chat.js"></script>
+  <script src="js/chat.js?v=2"></script>
   <script>
     // Function to scroll to profile section
     function scrollToProfile() {
